--- a/CSSPrj1(Spotify Clone)/index.html
+++ b/CSSPrj1(Spotify Clone)/index.html
@@ -140,6 +140,7 @@
                     <i class="fa-brands fa-chromecast"></i>
                 </div>
             </div>
+            <!-- Hello there this is a change -->
             <div class="player">
                 <div class="player-controls">
                     <img src="./assets/player_icon1.png" class="player-control-icon">
