--- a/MiniProject1(Photography HomePage)/index.html
+++ b/MiniProject1(Photography HomePage)/index.html
@@ -45,6 +45,7 @@
               <i class="fa-solid fa-image"></i>
               <a href="#">Gallery</a>
             </li>
+            <!-- hi there again a change -->
             <li>
               <i class="fa-solid fa-arrow-up-right-from-square"></i>
               <a href="#">Shortcuts</a>
